fix: startpage alignment on mobile

--- a/src/components/projectList/projectList.module.scss
+++ b/src/components/projectList/projectList.module.scss
@@ -131,6 +131,13 @@
    }
 }
 
+@media screen and (max-width: 620px) { 
+   .work {
+      align-items: flex-start;
+      height: auto;
+  }
+}
+
 @media screen and (min-width: 1400px) {
    .work {
       // ul {
